hw6 in progress 2